# Makefile.am for testing the test CPP programs
#

bin_PROGRAMS = PDEtest

PDEtest_SOURCES = \
	Scheduler.cpp \
	Token.cpp \
	simpleModel.cpp \
	Clock.h \
	Merge.h \
	actor.h \
	event.h \
	port.h \
	token.h \
	Display.h \
	hwTime.h \
	dependencylink.h \
	eventqueue.h \
	scheduler.h \
	typedport.h \
	ptpHwP1000LinuxDr.h

PDEtest_LDADD = -lpthread

#include_HEADERS = \
#	Clock.h \
#	Merge.h \
#	actor.h \
#	event.h \
#	port.h \
#	token.h \
#	Display.h \
#	hwTime.h \
#	dependencylink.h \
#	eventqueue.h \
#	scheduler.h \
#	typedport.h \
#	ptpHwP1000LinuxDr.h
